kubernetes/applications/media/servarr/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sabnzbd
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 2501
        runAsGroup: 2501
        fsGroup: 2501
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: sabnzbd
          image: ghcr.io/onedr0p/sabnzbd:4.4.0 # renovate: docker=ghcr.io/onedr0p/sabnzbd
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /app/data
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 100m
              memory: 192Mi
            limits:
              cpu: 1000m
              memory: 6Gi
          readinessProbe: &probe
            httpGet:
              port: 8080
              path: /api?mode=version
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          livenessProbe: *probe
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sabnzbd-config
        - name: media
          persistentVolumeClaim:
            claimName: servarr-media
        - name: tmp
          emptyDir: {}
