kubernetes/applications/media/servarr/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sabnzbd
  ports:
    - name: web
      port: 80
      targetPort: http
