kubernetes/applications/media/servarr/sabnzbd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  annotations:
    gethomepage.dev/description: Usenet Downloader
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Servarr
    gethomepage.dev/icon: sabnzbd.png
    gethomepage.dev/name: SABnzbd
spec:
  ingressClassName: cilium
  rules:
    - host: &host sabnzbd.costanza.cloud
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  name: web
  tls:
    - hosts:
        - *host
